--- a/src/App.css
+++ b/src/App.css
@@ -1,88 +1,126 @@
 body {
-    background-color: rgb(21, 0, 41);
+    background-color: black;
     display: flex;
     flex-direction: column;
-    margin: 0%;
+    margin: 100px 0 0 0;
     font-family: Copperplate;
 }
 
         /* buttons */
 
 #buttons {
-    /* margin: 2% 0%; */
     padding: 2% 0%;
     font-size: 2rem;
     display: flex;
     justify-content: center;
     text-align: center;
-    border-top: 4px solid rgb(228, 142, 132);
+    border-top: 1px solid salmon;
+    background-color: aliceblue;
 }
 
 .menu {
-    border: 5px solid rgb(228, 142, 132);
-    border-radius: 10px;
+    border: 3px solid salmon;
+    border-radius: 15px;
     padding: 2%;
-    background-color: rgb(147, 226, 255);
+    background-color: floralwhite;
     margin-right: 5%;
     cursor: pointer;
 }
 
+.menu:hover {
+    text-shadow: 2px 2px skyblue;
+}
+
 .reservation {
-    border: 5px solid rgb(228, 142, 132);
-    border-radius: 10px;
+    border: 3px solid skyblue;
+    border-radius: 15px;
     padding: 2%;
     margin-left: 5%;
-    background-color: rgb(147, 226, 255);
+    background-color:floralwhite;
     cursor: pointer;
-    color:rgb(0, 24, 43)
+}
+
+.reservation:hover {
+    text-shadow: 2px 2px salmon;
 }
 
         /* header */
-
 header {
+    margin: 0;
+    padding: 0;
+    height: 550px;
+    position: relative;
+    overflow: hidden;
+}
+
+.header {
+    background-color: whitesmoke;
     display: flex;
-    flex-direction: column;
-    background-image: url("../public/outside.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: top;
     justify-content: space-evenly;
     align-items: center;
-    font-weight: 1000;
-    border-top: 6px solid rgb(228, 142, 132);
-
-  
+    font-weight: 1000; 
+    width: 100%;
+    position: fixed;
+    top:0;
+    height: 100px;
+    border-bottom: 2px solid gold;
+    z-index: 1;
 }
 
 #title {
-    font-size: 7rem;
-    margin-top: 8%;
-    background-color: rgb(21, 0, 41);
-    border: 5px solid rgb(228, 142, 132);
-    border-radius: 8px;
-    padding: 5px 30px;
-    margin-bottom: 0%;
-    color: burlywood;
+    font-size: 5rem;
+    margin: 0;
+    color: black;
+    text-shadow: 3px 3px gold;
+    text-align: center;
 }
 
 #subtitle {
-    font-size: 2rem;
-    background-color: rgb(21, 0, 41);
-    border: 5px solid rgb(228, 142, 132);
-    border-radius: 8px;
-    padding: 5px 30px;
-    margin-bottom: 8%;
-    color: burlywood;
+    font-size: 1.5rem;
+    color: black;
+    text-shadow: 2px 2px gold;
+    text-align: center;
+
+}
+
+img {
+    margin: 0;
+    width: 100%;
+    height: auto;
+    z-index: -1;
+    object-fit: cover;
+    position: absolute;
+    right: 0;
 }
 
         /* content */
 
 .content {
-    background-color: rgb(218, 245, 255);
-    border-top: 4px solid rgb(132, 113, 255);
+    background-color: whitesmoke;
+    border-top: 1px solid salmon;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.map-text {
+    margin-bottom: 20px;
+}
+
+.gm-link {
+    text-decoration: none;
+    color: black;
+    padding: 10px;
+    margin-bottom: 10px;
+    font-size: 1rem;
+    background-color: blanchedalmond;
+    border: 2px solid black;
+    border-radius: 5px;
+}
+
+.gm-link:hover {
+    text-shadow: 1px 1px white;
+    background-color: pink;
 }
 
 .about {
@@ -99,15 +137,16 @@ header {
 }
 
 #map {
-    border: 5px solid salmon;
+    border: 3px solid pink;
     border-radius: 8px;
     margin-right: 20px;
+    z-index: 0;
 }
 
         /* footer */
 
 footer {
-    border-top: 4px solid rgb(132, 113, 255);
+    border-top: 1px solid rgb(132, 113, 255);
     background-color: rgb(21, 0, 41);
     padding: 3%;
 }
@@ -121,36 +160,36 @@ address {
 
 .footerLinks {
     padding: 5px;
-    color: rgb(255, 204, 204);
+    color: white;
     text-decoration: none;
 }
 
 .footerLinks:hover {
     color: hotpink;
-    text-decoration: underline;
 }
 
 /* responsiveness */
 
-@media screen and (max-width: 780px) {
-
-    header {
-        border-width: 3px;
-    }
+@media screen and (max-width: 800px) {
     
     #title {
         font-size: 2.5rem;
         font-weight: 600;
-        margin-top: 5%;
-        padding: 5px 15px;
-        border-width: 3px;
+        text-shadow: 2px 2px gold;
     }
 
     #subtitle {
         font-size: 1.2rem;
         font-weight: 400;
-        margin-top: 5%;
-        border-width: 3px;
+        text-shadow: 1px 1px gold;
+    }
+
+    img {
+        height: 400px;
+    }
+
+    header {
+        height: 400px;
     }
 
     #buttons {
@@ -218,6 +257,14 @@ address {
         font-size: 1rem;
         font-weight: 400;
         margin-top: 5%;
+    }
+
+    header {
+        height: 250px;
+    }
+
+    img {
+        height: 250px;
     }
 
     #buttons {
