--- a/src/App.css
+++ b/src/App.css
@@ -245,22 +245,27 @@ address {
 
 
 @media screen and (max-width: 450px) {
+
+    body {
+        margin-top: 80px;
+    }
     
     #title {
-        font-size: 2.5rem;
+        font-size: 2rem;
         font-weight: 600;
-        margin-top: 5%;
-        padding: 5px 15px;
+        padding: 0;
     }
 
     #subtitle {
-        font-size: 1rem;
-        font-weight: 400;
-        margin-top: 5%;
+        display: none;
     }
 
     header {
         height: 250px;
+    }
+
+    .header {
+        height: 80px;
     }
 
     img {
