--- a/src/App.css
+++ b/src/App.css
@@ -75,9 +75,10 @@ header {
 
 img {
     width: 100%;
-    height: auto;
+    height: 450px;
     z-index: -1;
     object-fit: cover;
+    object-position: 100% 60%;
     position: absolute;
     right: 0;
 }
