--- a/src/App.css
+++ b/src/App.css
@@ -39,7 +39,7 @@ body {
 header {
     margin: 0;
     padding: 0;
-    height: 540px;
+    height: 590px;
     border-bottom: 1px solid skyblue;
 }
 
@@ -75,10 +75,10 @@ header {
 
 img {
     width: 100%;
-    height: 450px;
+    height: 500px;
     z-index: -1;
     object-fit: cover;
-    object-position: 100% 60%;
+    object-position: 100% 50%;
     position: absolute;
     right: 0;
 }
@@ -160,7 +160,7 @@ address {
     color: hotpink;
 }
 
-/* responsiveness */
+    /* responsiveness */
 
 @media screen and (max-width: 800px) {
     
@@ -227,6 +227,7 @@ address {
 
 }
 
+    /* smartphone responsiveness */
 
 @media screen and (max-width: 450px) {
     
